# lab_5_pa

./: .gitignore
pa5/: CMakeLists.txt  child_work.c  child_work.h  mutex_work.c  pa23.c  parent_work.c  parent_work.h  pipes_const.c  pipes_const.h  priority_queue.c  priority_queue.h  work_with_pipes.c
